file name change

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
     <title>Codebox</title>
+    <meta charset="utf-8">
     <link rel="stylesheet" href="webp.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Livvic&display=swap" rel="stylesheet">
