--- a/layout-2.html
+++ b/layout-2.html
@@ -12,7 +12,7 @@
 
             <div class="headz">
                     <div class="logo"><img src="hey.png" style="width:30px; margin-left: 10px; align-self:center;"><span style="font-size: 1.3em; margin-left: 5px;"> Codebox</span></div>
-                <a class="r" href="layout.html">Log Out</a>
+                <a class="r" href="index.html">Log Out</a>
             </div>
 
 
