--- a/layout-2.html
+++ b/layout-2.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>2nd page</title>
+        <meta charset="utf-8">
         <link rel="stylesheet" href="webp2.css">
         <link href="https://fonts.googleapis.com/css?family=Livvic&display=swap" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,7 +24,9 @@
                         <hr>
                     </div>
                     <br>
-                    <button id="btnl1">Document 1</button>
+                    <div id="docs">
+                        <button class="btnl1">Document 1</button>
+                    </div>
                     <br><br>                    
                     <button id="btnl2">+ Add new</button>
                 </div>
@@ -35,7 +38,7 @@
                     <section>
                         <button class="utibuttons">Save</button>
                         <button class="utibuttons">Edit</button>
-                        <button class="utibuttons">Delete</button>
+                        <button class="utibuttons" id="btnr3">Delete</button>
                     </section>
                 </div>
 
@@ -44,5 +47,6 @@
 
             </div>
         </div>
+        <script src="layout2logic.js"></script>
     </body>
 </html>
